--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ pandas==1.2.3
 numpy==1.20.2
 nltk==3.6.1
 plotly.express==0.4.1
+sys==3.8
+setuptools==56.1.0
 ssl==1.16
 pystan==2.19.1.1
 fbprophet==0.7.1
